--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body {
 }
 
 html {
-  background-color: rgba(250, 250, 250);
+  background-color: rgb(24, 26, 27);
   max-width: 100%;
   overflow-x: hidden; /* Hide horizontal scrollbar */
 }
